<resources>
    <string name="app_name">LostWords</string>

    <string name="main_header">LostWords für Android</string>

    <string name="main_current_word_numbers" formatted="false">%d / %d</string>
    <string name="main_current_word_text" formatted="false">%s\n\n - - - \n\n%s</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="share_body">Ich habe gerade folgenden Ausdruck genutzt: \n\"%s\"\nSponsored by LostWords für Android</string>
    <string name="share_subject">Oldschool Begriff Alert!</string>
    <string name="share_chooser">Teile via</string>

    <string name="init_words" formatted="false">Reloade ok, %d (%d+%d) Wörter geladen.</string>

    <string name="ueber_title">Über LostWords</string>
    <string name="ueber_qrcode_prefix">\n\n\nLostWords im Google Play Store:</string>

    <string name="nav_topstring">LostWords</string>
    <string name="nav_substring">\'cause \'betuppen\' just sounds awesome!</string>
    <string name="nav_favorites">Favoriten</string>
    <string name="nav_ownwords">Hinzufügen</string>
    <string name="nav_share">Teilen</string>
    <string name="nav_about">Über LostWords</string>
    <string name="nav_settings">Einstellungen</string>
    <string name="nav_exit">Beenden</string>

    <string name="button_next"> <b>&gt;</b> </string>
    <string name="button_prev"> <b>&lt;</b> </string>

    <string name="settings_ownwords">setting_ownwords</string>
    <string name="settings_fav">setting_favorites</string>
    <string name="settings_shake">setting_shake</string>
    <string name="settings_shake_title">Schüttelfunktion</string>
    <string name="settings_shake_summary">Schütteln für ein Zufallswort mit Sprachausgabe</string>
    <string name="settings_shake_timeout">setting_shake_timeout</string>
    <string name="settings_shake_timeout_title">Schütteltimeout</string>
    <string name="settings_shake_timeout_summary">Mindestzeit zwischen zwei Schüttlern in Sekunden (aktuell: )</string>
    <string name="settings_shake_timeout_default">3</string>
    <string name="settings_shake_strength">setting_shake_strength</string>
    <string name="settings_shake_strength_title">Schüttelstärke</string>
    <string name="settings_shake_strength_summary">Schüttelstärke von 1=empfindlich bis 10=starkes-Schütteln-notwendig (aktuell: )</string>
    <string name="settings_shake_strength_default">4</string>
    <string name="settings_tts_locale">setting_tts_locale</string>
    <string name="settings_tts_locale_title">Sprachausgabe</string>
    <string name="settings_tts_locale_summary">Sprechweise der Sprachausgabe (aktuell: )</string>
    <string name="settings_tts_locale_default">de</string>

    <string name="search_title">Suche</string>
    <string name="search_hint">Suchbegriff</string>

    <string name="favorites_add">\"%s\" zu Favoriten hinzugefügt</string>
    <string name="favorites_remove">\"%s\" aus Favoriten entfernt</string>

    <string name="ownwords_fail" formatted="false">Aktion \"%s\" auf Wort \"%s\" fehlgeschlagen</string>
    <string name="ownwords_add">\"%s\" zu den Wörtern hinzugefügt</string>
    <string name="ownwords_updated">\"%s\" in den Wörtern geändert</string>
    <string name="ownwords_remove">\"%s\" aus den Wörtern entfernt</string>
    <string name="ownwords_title">Wort hinzufügen / ändern</string>
    <string name="ownwords_button_save">SPEICHERN</string>
    <string name="ownwords_button_remove">LÖSCHEN</string>
    <string name="ownwords_button_cancel">ABBRUCH</string>

    <string-array name="words">
        <item>aufmüpfig - Anweisungen nicht folgen</item>
        <item>Bengel - ungezogenes Kind</item>
        <item>betuppen - jemanden betrügen</item>
        <item>blümerant - sich flau/unwohl fühlen</item> <!-- spnsored by Boris -->
        <item>bonfortionös - eindrucksvoll</item>
        <item>Bredouille - missliche Situation</item>
        <item>ei der Daus! - grosse Verwunderung</item>
        <item>Ein X für ein U vormachen - jemanden betrügen</item>
        <item>Einfaltspinsel - unbedarfter Mensch</item>
        <item>etwas ersinnen - sich etwas ausdenken</item>
        <item>exorbitant - enorm groß</item> <!-- spnsored by Corinna L. -->
        <item>famos - hervorragend</item>
        <item>Faxen machen - herumalbern</item>
        <item>Firlefanzereien - Unsinn</item>
        <item>Fisimatenten machen - Ärger machen</item>
        <item>Flegel - schlecht erzogener Mann</item> <!-- sponsored by Alexalex -->
        <item>flink - schnell</item>
        <item>flunkern - lügen</item>
        <item>formidabel - aussergewöhnlich</item>
        <item>gehopst wie gesprungen - einerlei</item> <!-- sponsored by Ellen -->
        <item>Gutdünken - Einschätzung</item>
        <item>Hallodri - Nichtsnutz, Weiberheld</item>
        <item>Halunke - Verbrecher</item>
        <item>Handlanger - Gehilfe</item>
        <item>Hans-guck-in-die-Luft - Träumer</item>    <!--sponsored by Mama -->
        <item>Heidewitzka - grosses Erstaunen</item>
        <item>Heiermann - Fünf-DM-Münze</item>
        <item>Heureka - Ausdruck grosser Freude</item>
        <item>Humbug - unsinnige Tat oder Aussage</item>
        <item>Ich glaub\' es hackt! - das missfällt mir ausserordentlich</item>
        <item>Klamauk - billige Komik</item>
        <item>Kleinod - Kostbarkeit</item> <!-- spnsored by Corinna L. -->
        <item>Klumpatsch - wertloses Zeug</item> <!-- spnsored by Tonia -->
        <item>Kokolores - Mist, Blödsinn</item>
        <item>krakeelen - schreien, brüllen</item>
        <item>Lausbub - freches Kind</item>
        <item>liederlich - nachlässig</item> <!-- spnsored by Corinna L. -->
        <item>Lümmel - Rowdy</item>
        <item>Luftikus - Träumer</item> <!--sponsored by Mama -->
        <item>mannigfaltig - facettenreich</item>
        <item>meschugge - verrückt</item>
        <item>Mumpitz - Unsinn</item>
        <item>Murks - Gestümper</item>
        <item>Muschpoke - Verwandtschaft</item> <!--sponsored by Mama -->
        <item>Obacht! - aufgepasst!</item>
        <item>oll - alt, abgenutzt</item>
        <item>Panoptikum - Kuriositätenausstellung</item>  <!-- spnsored by Corinna L. -->
        <item>Papperlapapp - Unsinn</item>    <!--sponsored by Mama -->
        <item>Potzblitz - grosse Verwunderung</item>
        <item>Rabauke - rücksichtsloser Mensch</item>
        <item>Rabatz - Krach, Krawall</item>
        <item>Racker - aufgewecktes Kind</item>
        <item>rasch - schnell</item>
        <item>renitent - widerspenstig</item>
        <item>Rüffel - Zurechtweisung</item>
        <item>Sammelsurium - unsortiertes Gemisch</item>
        <item>salopp - ungezwungen</item>
        <item>sauertöpfisch - schlecht gelaunt</item>
        <item>Schabernack - lustiger Streich</item>
        <item>Schabracke - Schreckschraube</item>
        <item>Scherge - böser Handlanger</item>
        <item>Scheusal - Unmensch</item>
        <item>Schlingel - Spassmacher</item>    <!-- sponsored by Ellen -->
        <item>Schlummi - Schlaf</item>    <!-- sponsored by Jo -->
        <item>schmuck - sehr ansehnlich</item>
        <item>sich grämen - bekümmert sein</item>
        <item>Sperenzchen - Albernheit</item>
        <item>spinksen - heimlich nachgucken</item>
        <item>Spökes - Spass</item>
        <item>Springinsfeld - unerfahrener Jungspund</item>
        <item>Tausendsassa - Multitalent</item>
        <item>Tinnef - wertloses Zeugs, Unsinn</item>
        <item>Trunkenbold - Trinker</item> <!-- spnsored by Corinna L. -->
        <item>Ulk - Witz</item>
        <item>verhohnepiepeln - verspotten</item>
        <item>vermaledeit - verflucht</item>
        <item>Wie bei Hempels unterm Sofa - unordentlich</item>
        <item>Zinnober - wertloses Zeug</item>
    </string-array>

    <string-array name="settings_shake_list">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_click_empty">(keine Favoriten hinzugefügt)</string>

</resources>
