<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/grp1" android:checkableBehavior="single">
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:actionProviderClass="android.widget.ShareActionProvider"
                android:title="@string/nav_share" />

             <item
                 android:id="@+id/nav_ueber"
                 android:icon="@android:drawable/ic_dialog_info"
                 android:title="@string/nav_about" />
    </group>

    <group android:id="@+id/grp2" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_close"
            android:icon="@android:drawable/ic_delete"
            android:title="@string/nav_exit" />
    </group>

</menu>
